Push footer down using flex styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,16 @@
     box-sizing: border-box;
 }
 
+/* BODY STYLING */
+
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* GENERIC PROJECT STYLES */
+    color: #3a3a3a;
+}
+
  /* HEADER STYLING */
 
 header {
@@ -16,6 +26,7 @@ header {
 
 main {
     background-color: lightblue;
+    flex: 1 0 auto;
 }
 
  /* FOOTER STYLING */
