--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+/* GOOGLE FONTS IMPORT */
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200..700&display=swap'); 
+ 
  /* GENERAL STYLING */
  
  * {
@@ -14,6 +18,7 @@ body {
     flex-direction: column;
     /* GENERIC PROJECT STYLES */
     color: #3a3a3a;
+    font-family: 'Lato', sans-serif;
 }
 
  /* HEADER STYLING */
