--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 /* GOOGLE FONTS IMPORT */
 
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200..700&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
  
  /* GENERAL STYLING */
  
@@ -25,6 +26,10 @@ body {
 
 header {
     background-color: lightcoral;
+}
+
+h1 {
+    font-family: 'Oswald', sans-serif;
 }
 
  /* MAIN AREA STYLING */
