--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,3 +102,24 @@ main {
 footer {
     background-color: orange;
 }
+
+/* MEDIA QUERY FOR TABLET */
+
+@media screen and (min-width: 768px) {
+    nav {
+        display: block;
+        position: relative;
+        box-shadow: none;
+        width: fit-content;
+        padding-right: 1rem;
+    }
+    #menu {
+        display: flex;
+    }
+    #menu > li {
+        padding-left: 1rem;
+    }
+    .nav-toggle-label {
+        display: none;
+    }
+}
