--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,15 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
+/* GENERAL H1 SYLING */
+
+h1, h2, h3 {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
+}
+
  /* HEADER STYLING */
 
 header {
@@ -39,13 +48,6 @@ header {
 header a {
     text-decoration: none;
     color: inherit;
-}
-
-h1 {
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #252525;
 }
 
 #menu {
@@ -102,6 +104,23 @@ main {
     height: 600px;
     width: 100%;
     background: url(../images/hero-image.webp) no-repeat center center/cover;
+    position: relative;
+}
+
+#cover-text {
+    /* SEMI-TRANSPARENT BACKGROUND FOR HERO */
+    background-color: rgba(241, 109, 107, .7);
+    font-size: 130%;
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+}
+
+#cover-text > h2, #cover-text > h3 {
+    color: #ffffff;
 }
 
  /* FOOTER STYLING */
@@ -147,6 +166,11 @@ main {
     }
     main {
         margin-top: 79px;
+    }
+    /* HERO */
+    #cover-text {
+        width: 300px;
+        right: 50px;
     }
 }
 
