--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-/* GENERAL H1 SYLING */
+/* GENERAL H1, H2, H3 SYLING */
 
 h1, h2, h3 {
     font-family: 'Oswald', sans-serif;
@@ -121,6 +121,32 @@ main {
 
 #cover-text > h2, #cover-text > h3 {
     color: #ffffff;
+}
+
+/* REASONS STYLING */
+
+#reasons {
+    width: 90%;
+    margin: 20px auto;
+}
+
+#reasons > h2 {
+    font-size: 280%;
+    margin-bottom: 20px;
+}
+
+#benefits hr {
+    border-top: 1px solid #3a3a3a;
+    margin: 5px 0;
+}
+
+#benefits-physical p, #benefits-mental p {
+    padding: 0 20px;
+}
+
+#benefits-physical > div, #benefits-mental > div {
+    line-height: 20px;
+    margin-bottom: 20px;
 }
 
  /* FOOTER STYLING */
