--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,6 +132,7 @@ main {
 
 #reasons > h2 {
     font-size: 280%;
+    text-align: center;
     margin-bottom: 20px;
 }
 
@@ -140,7 +141,7 @@ main {
     margin: 5px 0;
 }
 
-#benefits-physical p, #benefits-mental p {
+#benefits p {
     padding: 0 20px;
 }
 
