--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,9 +185,12 @@ main {
     color: #3a3a3a;
 }
 
-/* MEDIA QUERY FOR TABLET */
+/* OPTIMIZATION FOR SCREENS OVER 768 PIXELS (TABLET) */
 
 @media screen and (min-width: 768px) {
+
+    /* NAVIGATION TABLET */
+    
     nav {
         display: block;
         position: relative;
@@ -195,32 +198,100 @@ main {
         width: fit-content;
         padding-right: 1rem;
     }
-    #menu {
-        display: flex;
-    }
-    #menu > li {
-        padding-left: 1rem;
-    }
+
     .nav-toggle-label {
         display: none;
     }
+
     #logo {
         font-size: 280%;
         line-height: 75px;
         margin: 0 0.5rem;
     }
+
+    /* MENU TABLET */
+
+    #menu {
+        display: flex;
+    }
+
+    #menu > li {
+        padding-left: 1rem;
+    }
+
+    /* MAIN TABLET */
+
     main {
         margin-top: 79px;
     }
+
     /* HERO */
+
     #cover-text {
         width: 300px;
         right: 50px;
     }
+
+    /* REASONS */
+
+    #benefits-physical, #benefits-mental {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    #benefits-physical > div, #benefits-mental > div {
+        width: 75%;
+    }
+
+    #benefits-mental > div {
+        text-align: end;
+        align-self: flex-end;
+    }
+
 }
 
+/* OPTIMIZATION FOR SCREENS OVER 992 PIXELS (DESKTOP) */
+
 @media screen and (min-width: 992px) {
+
+    /* LINK UNDERLINE */
+
     a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
+
+}
+
+/* OPTIMIZATION FOR SCREENS OVER 1200 PIXELS (DESKTOP) */
+
+@media screen and (min-width: 1200px) {
+
+    /* ORDER OF BENEFITS SECTION ON LARGE DESKTOP */
+
+    #benefits {
+        display: flex;
+        flex-direction: row;
+    }
+
+    #benefits > div {
+        flex: 1;
+    }
+
+    #benefits-mental {
+        order: 1;
+    }
+
+    #benefits-image {
+        order: 0;
+    }
+
+    #benefits-mental > div {
+        align-self: flex-start;
+    }
+
+    #benefits-physical > div {
+        align-self: flex-end;
+    }
+    
 }
