--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,12 @@ h1, h2, h3 {
     color: #252525;
 }
 
+/* CLASS TO HIDE CONTENT */
+
+.hidden-heading {
+    display: none;
+}
+
  /* HEADER STYLING */
 
 header {
