--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,8 @@ nav {
  /* MAIN AREA STYLING */
 
 main {
+    display: flex;
+    flex-direction: column;
     flex: 1 0 auto;
     margin-top: 47px;
 }
@@ -209,7 +211,60 @@ main {
     line-height: 1em;
 }
 
- /* FOOTER STYLING */
+/* SIGNUP PAGE */
+
+/* SECTION */
+
+#signup {
+    background: url(../images/signup-image.webp) no-repeat;
+    background-size: cover;
+    background-position: 75%;
+    display: flex;
+    flex-grow: 1;
+    padding: 20px 10% 0 10%;
+}
+
+#signup-form {
+    color: #ffffff;
+    background-color: rgba(60, 60, 60, .6);
+    padding: 30px;
+}
+
+#signup-form > h2 {
+    color: #fafafa;
+    margin-bottom: 20px;
+}
+
+/* TEXT, RADIO, SUBMIT */
+
+.text-input {
+    background: transparent;
+    color: #fafafa;
+    width: 100%;
+    height: 25px;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    padding: 0 5px;
+}
+
+.radio-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.join-button {
+    margin-top: 20px;
+    padding: 15px 32px;
+    border-radius: 2px;
+    background-color: #454b1b;
+    color: #fafafa;
+    font-size: 100%;
+}
+
+/* FOOTER STYLING */
 
 #social-networks {
     text-align: center;
@@ -303,6 +358,29 @@ main {
 
     #photos {
         column-count: 3;
+    }
+
+    /* SIGNUP */
+
+    #signup {
+        background-position: center;
+        position: relative;
+    }
+
+    #signup-form {
+        max-width: 400px;
+        position: absolute;
+        left: 10%;
+        margin-top: 150px;
+    }
+
+    .text-input:hover {
+        border-color: #f16c6b;
+    }
+
+    .join-button:hover {
+        background-color: #fafafa;
+        color: #454b1b;
     }
 
 }
